--- a/module_1/index.html
+++ b/module_1/index.html
@@ -8,27 +8,33 @@
     <title>Urban</title>
   </head>
   <body>
-    <section class="info">
-      <img class="myPhoto" src="img/myPhoto.jpg" alt="" />
-      <div>
-        <span>Мои лучшие качества</span>
-        <ul>
-          <li>Позитивный взгляд на жизнь</li>
-          <li>Целеустремленность</li>
-          <li>Нестандартное мышление</li>
-          <li>Амбициозность</li>
-          <li>Креативность</li>
-        </ul>
+    <nav class="nav">
+      <a href="index.html">Обо мне</a>
+      <a href="second_page.html">WEB</a>
+    </nav>
+    <section class="main">
+      <div class="aboutMe">
+        <img class="myPhoto" src="img/myPhoto.jpg" alt="" />
+        <div>
+          <span>Мои лучшие качества:</span>
+          <ul>
+            <li>Позитивный взгляд на жизнь</li>
+            <li>Целеустремленность</li>
+            <li>Нестандартное мышление</li>
+            <li>Амбициозность</li>
+            <li>Креативность</li>
+          </ul>
+        </div>
       </div>
-      <div>
+      <div class="contacts">
         <a href="https://steamcommunity.com/id/duraley4242/">Steam</a>
         <a href="https://vk.com/mrazbezmozga">VK</a>
         <a href="https://github.com/Teslas-86">github</a>
       </div>
-      <div>
-        <button></button>
-        <button></button>
-        <button></button>
+      <div class="buttons">
+        <button>Написать</button>
+        <button>Позвонить</button>
+        <button>Оставить предложение о работе</button>
       </div>
     </section>
     <script src="js/script.js"></script>
