--- a/module_2/index.html
+++ b/module_2/index.html
@@ -12,17 +12,17 @@
       <h1 class="header-title">Frontend разработка</h1>
       <nav class="header-nav">
         <ul class="header-nav__list">
-          <li class="header-nav__item">Введение</li>
-          <li class="header-nav__item">Инструменты</li>
-          <li class="header-nav__item">Языки</li>
-          <li class="header-nav__item">Перейти на 2ю страницу</li>
-          <li class="header-nav__item">Оставить комментарий</li>
+          <a href="#"><li class="header-nav__item">Введение</li></a>
+          <a href="#"><li class="header-nav__item">Инструменты</li></a>
+          <a href="#"><li class="header-nav__item">Языки</li></a>
+          <a href="#"><li class="header-nav__item">Перейти на 2ю страницу</li></a>
+          <a href="#"><li class="header-nav__item">Оставить комментарий</li></a>
         </ul>
       </nav>
     </header>
     <hr />
     <main class="main">
-      <section class="intro">
+      <section class="intro" id="intro">
         <h2 class="intro-title">Введение в Frontend Разработку</h2>
         <p class="intro-text">
           Frontend разработка отвечает за создание интерфейса пользовательской
@@ -31,7 +31,7 @@
         </p>
       </section>
       <hr />
-      <section class="langs">
+      <section class="langs" id="langs">
         <h2 class="langs-title">Языки Frontend Разработки</h2>
         <ul class="langs-list">
           <h3 class="langs-list__title">
@@ -53,7 +53,7 @@
         </ul>
       </section>
       <hr />
-      <section class="tools">
+      <section class="tools" id="tools">
         <h2 class="tools-title">Инструменты Frontend Разработки</h2>
         <ol class="tools-list">
           <li class="tools-list__item">
@@ -72,7 +72,7 @@
         </ol>
       </section>
       <hr />
-      <section class="articles">
+      <section class="articles" id="articles">
         <article class="article">
           <a href="https://habr.com/ru/articles/855640/"
             ><h2 class="article-title">
