--- a/module_2/index.html
+++ b/module_2/index.html
@@ -9,18 +9,19 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="header-title">Frontend разработка</h1>
+      <div>
+        <a href="index.html" class="home-link"><h1 class="header-title">Frontend разработка</h1></a>
       <nav class="header-nav">
         <ul class="header-nav__list">
-          <a href="#"><li class="header-nav__item">Введение</li></a>
-          <a href="#"><li class="header-nav__item">Инструменты</li></a>
-          <a href="#"><li class="header-nav__item">Языки</li></a>
-          <a href="#"><li class="header-nav__item">Перейти на 2ю страницу</li></a>
-          <a href="#"><li class="header-nav__item">Оставить комментарий</li></a>
+          <a href="#intro"><li class="header-nav__item">Введение</li></a>
+          <a href="#langs"><li class="header-nav__item">Инструменты</li></a>
+          <a href="#tools"><li class="header-nav__item">Языки</li></a>
+          <a href="second_page.html"><li class="header-nav__item">Перейти на 2ю страницу</li></a>
+          <a href="third_page.html"><li class="header-nav__item">Оставить комментарий</li></a>
         </ul>
       </nav>
+      </div>
     </header>
-    <hr />
     <main class="main">
       <section class="intro" id="intro">
         <h2 class="intro-title">Введение в Frontend Разработку</h2>
@@ -30,7 +31,6 @@
           CSS и JavaScript.
         </p>
       </section>
-      <hr />
       <section class="langs" id="langs">
         <h2 class="langs-title">Языки Frontend Разработки</h2>
         <ul class="langs-list">
@@ -52,7 +52,6 @@
           </li>
         </ul>
       </section>
-      <hr />
       <section class="tools" id="tools">
         <h2 class="tools-title">Инструменты Frontend Разработки</h2>
         <ol class="tools-list">
@@ -71,7 +70,6 @@
           </li>
         </ol>
       </section>
-      <hr />
       <section class="articles" id="articles">
         <article class="article">
           <a href="https://habr.com/ru/articles/855640/"
@@ -163,7 +161,6 @@
         </article>
       </section>
     </main>
-    <hr />
     <footer class="footer">
       <nav class="footer-nav">
         <ul class="footer-nav__list">
