--- a/module_2/index.html
+++ b/module_2/index.html
@@ -26,9 +26,9 @@
       <section class="intro" id="intro">
         <h2 class="intro-title">Введение в Frontend Разработку</h2>
         <p class="intro-text">
-          Frontend разработка отвечает за создание интерфейса пользовательской
-          части веб-сайта или веб-приложения. Она включает в себя работу с HTML,
-          CSS и JavaScript.
+          <b>Frontend разработка</b> отвечает за создание интерфейса пользовательской
+          части веб-сайта или веб-приложения.<br /> Она включает в себя работу с <b>HTML</b>,
+          <b>CSS</b> и <b>JavaScript</b>.
         </p>
       </section>
       <section class="langs" id="langs">
@@ -162,13 +162,13 @@
       </section>
     </main>
     <footer class="footer">
-      <nav class="footer-nav">
-        <ul class="footer-nav__list">
-          <li class="footer-nav__item">Перейти на 2ю страницу</li>
-          <li class="footer-nav__item">Оставить комментарий</li>
-        </ul>
-      </nav>
       <div class="contact-me">
+        <nav class="footer-nav">
+            <ul class="footer-nav__list">
+              <li class="footer-nav__item">Перейти на 2ю страницу</li>
+              <li class="footer-nav__item">Оставить комментарий</li>
+            </ul>
+          </nav>
         <a href="https://github.com/Teslas-86" class="contact-me__link">
           Мои 2 коммита в год на github
         </a>
