--- a/module_2/index.html
+++ b/module_2/index.html
@@ -23,7 +23,7 @@
       </div>
     </header>
     <main class="main">
-      <section class="intro" id="intro">
+      <section class="intro light-block" id="intro">
         <h2 class="intro-title">Введение в Frontend Разработку</h2>
         <p class="intro-text">
           <b>Frontend разработка</b> отвечает за создание интерфейса пользовательской
@@ -52,7 +52,7 @@
           </li>
         </ul>
       </section>
-      <section class="tools" id="tools">
+      <section class="tools light-block" id="tools">
         <h2 class="tools-title">Инструменты Frontend Разработки</h2>
         <ol class="tools-list">
           <li class="tools-list__item">
