--- a/module_2/index.html
+++ b/module_2/index.html
@@ -23,7 +23,7 @@
       </div>
     </header>
     <main class="main">
-      <section class="intro light-block" id="intro">
+      <section class="intro " id="intro">
         <h2 class="intro-title">Введение в Frontend Разработку</h2>
         <p class="intro-text">
           <b>Frontend разработка</b> отвечает за создание интерфейса пользовательской
@@ -31,7 +31,7 @@
           <b>CSS</b> и <b>JavaScript</b>.
         </p>
       </section>
-      <section class="langs" id="langs">
+      <section class="langs bgc-block" id="langs">
         <h2 class="langs-title">Языки Frontend Разработки</h2>
         <ul class="langs-list">
           <h3 class="langs-list__title">
@@ -52,7 +52,7 @@
           </li>
         </ul>
       </section>
-      <section class="tools light-block" id="tools">
+      <section class="tools " id="tools">
         <h2 class="tools-title">Инструменты Frontend Разработки</h2>
         <ol class="tools-list">
           <li class="tools-list__item">
@@ -70,7 +70,7 @@
           </li>
         </ol>
       </section>
-      <section class="articles" id="articles">
+      <section class="articles bgc-block" id="articles">
         <article class="article">
           <a href="https://habr.com/ru/articles/855640/"
             ><h2 class="article-title">
