--- a/module_2/index.html
+++ b/module_2/index.html
@@ -56,22 +56,22 @@
         <h2 class="tools-title">Инструменты Frontend Разработки</h2>
         <ol class="tools-list">
           <li class="tools-list__item">
-            Visual Studio Code - Мощный редактор кода с поддержкой множества
+            <b>Visual Studio Code</b> - Мощный редактор кода с поддержкой множества
             языков и плагинов.
           </li>
           <li class="tools-list__item">
-            React - библиотека для создания пользовательских интерфейсов.
+            <b>React</b> - библиотека для создания пользовательских интерфейсов.
           </li>
           <li class="tools-list__item">
-            Sass - репроцессор CSS с расширенными возможностями.
+            <b>Sass</b> - репроцессор CSS с расширенными возможностями.
           </li>
           <li class="tools-list__item">
-            Webpack - Сборщик модулей для JavaScript приложений.
+            <b>Webpack</b> - Сборщик модулей для JavaScript приложений.
           </li>
         </ol>
       </section>
-      <section class="articles bgc-block" id="articles">
-        <article class="article">
+      <section class="articles " id="articles">
+        <article class="article bgc-block">
           <a href="https://habr.com/ru/articles/855640/"
             ><h2 class="article-title">
               Что должен знать Junior Frontend разработчик в 2024 году
@@ -101,7 +101,7 @@
             <a href="https://habr.com/ru/articles/855640/">Читать</a>
           </p>
         </article>
-        <article class="article">
+        <article class="article bgc-block">
           <a href="https://habr.com/ru/companies/otus/articles/688270/"
             ><h2 class="article-title">Перегрузка функций в TypeScript</h2></a
           >
@@ -125,7 +125,7 @@
             >
           </p>
         </article>
-        <article class="article">
+        <article class="article bgc-block">
           <a
             href="https://proglib.io/p/9-glavnyh-trendov-v-razrabotke-frontenda-v-2024-godu-2024-01-16"
             ><h2 class="article-title">
