--- a/module_2/index.html
+++ b/module_2/index.html
@@ -70,7 +70,8 @@
           </li>
         </ol>
       </section>
-      <section class="articles " id="articles">
+      <section class="articles" id="articles">
+        <h2 class="articles-title">Статьи</h2>
         <article class="article bgc-block">
           <a href="https://habr.com/ru/articles/855640/"
             ><h2 class="article-title">
