--- a/module_2/index.html
+++ b/module_2/index.html
@@ -4,31 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Urban</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header class="header">
       <div>
-        <a href="index.html" class="home-link"><h1 class="header-title">Frontend разработка</h1></a>
-      <nav class="header-nav">
-        <ul class="header-nav__list">
-          <a href="#intro"><li class="header-nav__item">Введение</li></a>
-          <a href="#langs"><li class="header-nav__item">Инструменты</li></a>
-          <a href="#tools"><li class="header-nav__item">Языки</li></a>
-          <a href="second_page.html"><li class="header-nav__item">Перейти на 2ю страницу</li></a>
-          <a href="third_page.html"><li class="header-nav__item">Оставить комментарий</li></a>
-        </ul>
-      </nav>
+        <a href="index.html" class="home-link"
+          ><h1 class="header-title">Frontend разработка</h1></a
+        >
+        <nav class="header-nav">
+          <ul class="header-nav__list">
+            <a href="#intro"><li class="header-nav__item">Введение</li></a>
+            <a href="#langs"><li class="header-nav__item">Инструменты</li></a>
+            <a href="#tools"><li class="header-nav__item">Языки</li></a>
+            <a href="second_page.html"
+              ><li class="header-nav__item">Перейти на 2ю страницу</li></a
+            >
+            <a href="third_page.html"
+              ><li class="header-nav__item">Оставить комментарий</li></a
+            >
+          </ul>
+        </nav>
       </div>
     </header>
     <main class="main">
-      <section class="intro " id="intro">
+      <section class="intro" id="intro">
         <h2 class="intro-title">Введение в Frontend Разработку</h2>
         <p class="intro-text">
-          <b>Frontend разработка</b> отвечает за создание интерфейса пользовательской
-          части веб-сайта или веб-приложения.<br /> Она включает в себя работу с <b>HTML</b>,
-          <b>CSS</b> и <b>JavaScript</b>.
+          <b>Frontend разработка</b> отвечает за создание интерфейса
+          пользовательской части веб-сайта или веб-приложения.<br />
+          Она включает в себя работу с <b>HTML</b>, <b>CSS</b> и
+          <b>JavaScript</b>.
         </p>
       </section>
       <section class="langs bgc-block" id="langs">
@@ -52,12 +59,12 @@
           </li>
         </ul>
       </section>
-      <section class="tools " id="tools">
+      <section class="tools" id="tools">
         <h2 class="tools-title">Инструменты Frontend Разработки</h2>
         <ol class="tools-list">
           <li class="tools-list__item">
-            <b>Visual Studio Code</b> - Мощный редактор кода с поддержкой множества
-            языков и плагинов.
+            <b>Visual Studio Code</b> - Мощный редактор кода с поддержкой
+            множества языков и плагинов.
           </li>
           <li class="tools-list__item">
             <b>React</b> - библиотека для создания пользовательских интерфейсов.
@@ -163,23 +170,27 @@
       </section>
     </main>
     <footer class="footer">
+      <nav class="footer-nav">
+        <ul class="footer-nav__list">
+          <a href="index.html"><li class="footer-nav__item">На главную</li></a>
+          <a href="second_page.html"
+            ><li class="footer-nav__item">Перейти на 2ю страницу</li></a
+          >
+          <a href="third_page.html"
+            ><li class="footer-nav__item">Оставить комментарий</li></a
+          >
+        </ul>
+      </nav>
       <div class="contact-me">
-        <nav class="footer-nav">
-            <ul class="footer-nav__list">
-              <li class="footer-nav__item">Перейти на 2ю страницу</li>
-              <li class="footer-nav__item">Оставить комментарий</li>
-            </ul>
-          </nav>
         <a href="https://github.com/Teslas-86" class="contact-me__link">
           Мои 2 коммита в год на github
         </a>
         <a href="https://t.me/pppqqww" class="contact-me__link">
           tg: @pppqqww
         </a>
-          <a href="mailto:sasha.kiselev0904@mail.ru" class="contact-me__link">
-            Email: sasha.kiselev0904@mail.ru
+        <a href="mailto:sasha.kiselev0904@mail.ru" class="contact-me__link">
+          Email: sasha.kiselev0904@mail.ru
         </a>
-        </p>
       </div>
     </footer>
   </body>
